--- a/chapter-01.ipynb
+++ b/chapter-01.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Strings**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -76,6 +83,167 @@
     "full_name = f\"{first_name} {last_name}\"\n",
     "print(full_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Ada Lovelace!\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name = \"ada\"\n",
+    "last_name = \"lovelace\"\n",
+    "full_name = f\"{first_name} {last_name}\"\n",
+    "print(f\"Hello, {full_name.title()}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One of Python's strengths is its diverse community.\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = \"One of Python's strengths is its diverse community.\"\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Hash, stop working there.\n"
+     ]
+    }
+   ],
+   "source": [
+    "person_name = \"Hash\"\n",
+    "print(f\"Hello {person_name}, stop working there.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash\n",
+      "HASH\n",
+      "hash\n"
+     ]
+    }
+   ],
+   "source": [
+    "person_name = \"HaSh\"\n",
+    "print(person_name.title())\n",
+    "print(person_name.upper())\n",
+    "print(person_name.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antoine De Saint-Exupéry once said, \"People have forgotten this truth,\" the fox said. \"But you mustn’t forget it. You become responsible forever for what you’ve tamed.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "author = \"antoine de saint-exupéry\"\n",
+    "quote = \"\\\"People have forgotten this truth,\\\" the fox said. \\\"But you mustn’t forget it. You become responsible forever for what you’ve tamed.\\\"\"\n",
+    "\n",
+    "print(f\"{author.title()} once said, {quote}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antoine De Saint-Exupéry once said, \"People have forgotten this truth,\" the fox said. \"But you mustn’t forget it. You become responsible forever for what you’ve tamed.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "author = \"antoine de saint-exupéry\"\n",
+    "quote = \"\\\"People have forgotten this truth,\\\" the fox said. \\\"But you mustn’t forget it. You become responsible forever for what you’ve tamed.\\\"\"\n",
+    "message = f\"{author.title()} once said, {quote}\"\n",
+    "\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  The\n",
+      "\tHash Fall   \n",
+      "The\n",
+      "\tHash Fall   \n",
+      "  The\n",
+      "\tHash Fall\n",
+      "The\n",
+      "\tHash Fall\n"
+     ]
+    }
+   ],
+   "source": [
+    "me = \"  The\\n\\tHash Fall   \"\n",
+    "print(me)\n",
+    "print(me.lstrip())\n",
+    "print(me.rstrip())\n",
+    "print(me.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Numbers**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
