--- a/chapter-04.ipynb
+++ b/chapter-04.ipynb
@@ -1,18 +1,341 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Loop**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['audi', 'bmw', 'subaru', 'toyota']\n"
+      "alice\n",
+      "david\n",
+      "carolina\n"
      ]
     }
    ],
+   "source": [
+    "magicians= ['alice', 'david', 'carolina']\n",
+    "for magician in magicians:\n",
+    "    print(magician)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice, that was a great trick!\n",
+      "I can't wait to see your next trick, Alice.\n",
+      "\n",
+      "David, that was a great trick!\n",
+      "I can't wait to see your next trick, David.\n",
+      "\n",
+      "Carolina, that was a great trick!\n",
+      "I can't wait to see your next trick, Carolina.\n",
+      "\n",
+      "Thank you, everyone. That was a great magic show!\n"
+     ]
+    }
+   ],
+   "source": [
+    "magicians= ['alice', 'david', 'carolina']\n",
+    "for magician in magicians:\n",
+    "    print(f\"{magician.title()}, that was a great trick!\")\n",
+    "    print(f\"I can't wait to see your next trick, {magician.title()}.\\n\")\n",
+    "    \n",
+    "print(\"Thank you, everyone. That was a great magic show!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in range(1, 5):\n",
+    "    print(value)\n",
+    "    \n",
+    "print(\"\\n\")\n",
+    "\n",
+    "for value in range(1, 6):\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = list(range(6))\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_numbers = list(range(2, 11, 2))\n",
+    "print(even_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = []\n",
+    "for value in range(1, 11):\n",
+    "    squares.append(value**2)\n",
+    "    \n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "digits = list(range(10))\n",
+    "min(digits)\n",
+    "max(digits)\n",
+    "sum(digits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = [value**2 for value in range(1,11)]\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['charles', 'martina', 'michael']\n",
+      "['martina', 'michael', 'florence']\n",
+      "['charles', 'martina', 'michael', 'florence']\n",
+      "['michael', 'florence', 'eli']\n",
+      "['michael', 'florence', 'eli']\n"
+     ]
+    }
+   ],
+   "source": [
+    "players = ['charles', 'martina', 'michael', 'florence', 'eli']\n",
+    "print(players[0:3])\n",
+    "print(players[1:4])\n",
+    "print(players[:4])\n",
+    "print(players[2:])\n",
+    "print(players[-3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the first three players on my team:\n",
+      "Charles\n",
+      "Martina\n",
+      "Michael\n"
+     ]
+    }
+   ],
+   "source": [
+    "players = ['charles', 'martina', 'michael', 'florence', 'eli']\n",
+    "\n",
+    "print(\"Here are the first three players on my team:\")\n",
+    "for player in players[:3]:\n",
+    "    print(player.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite foods are:\n",
+      "['pizza', 'falafel', 'carrot cake']\n",
+      "\n",
+      "My friend's favorite foods are:\n",
+      "['pizza', 'falafel', 'carrot cake']\n",
+      "\n",
+      "My favorite foods are:\n",
+      "['pizza', 'falafel', 'carrot cake', 'cannoli']\n",
+      "\n",
+      "My friend's favorite foods are:\n",
+      "['pizza', 'falafel', 'carrot cake', 'ice cream']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_foods = ['pizza', 'falafel', 'carrot cake']\n",
+    "friend_foods = my_foods[:]\n",
+    "\n",
+    "print(f\"My favorite foods are:\\n{my_foods}\")\n",
+    "print(f\"\\nMy friend's favorite foods are:\\n{friend_foods}\")\n",
+    "\n",
+    "my_foods.append('cannoli')\n",
+    "friend_foods.append('ice cream')\n",
+    "\n",
+    "print(f\"\\nMy favorite foods are:\\n{my_foods}\")\n",
+    "print(f\"\\nMy friend's favorite foods are:\\n{friend_foods}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "50\n",
+      "(50,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dimensions = (200, 50)\n",
+    "print(dimensions[0])\n",
+    "print(dimensions[1])\n",
+    "print(dimensions[-1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "50\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/hash/Workspace/python-crash-course/chapter-04.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/hash/Workspace/python-crash-course/chapter-04.ipynb#ch0000013vscode-remote?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(dimensions[\u001b[39m0\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/hash/Workspace/python-crash-course/chapter-04.ipynb#ch0000013vscode-remote?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(dimensions[\u001b[39m1\u001b[39m])\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/hash/Workspace/python-crash-course/chapter-04.ipynb#ch0000013vscode-remote?line=3'>4</a>\u001b[0m dimensions[\u001b[39m0\u001b[39;49m] \u001b[39m=\u001b[39m \u001b[39m250\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "dimensions = (200, 50)\n",
+    "print(dimensions[0])\n",
+    "print(dimensions[1])\n",
+    "dimensions[0] = 250"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
