--- a/chapter-05.ipynb
+++ b/chapter-05.ipynb
@@ -1,27 +1,169 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**if**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audi\n",
+      "BMW\n",
+      "Subaru\n",
+      "Toyota\n"
+     ]
+    }
+   ],
+   "source": [
+    "cars = ['audi', 'bmw', 'subaru', 'toyota']\n",
+    "\n",
+    "for car in cars:\n",
+    "    if car == 'bmw':\n",
+    "        print(car.upper())\n",
+    "    else:\n",
+    "        print(car.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car = 'Audi'\n",
+    "car.lower() == 'audi'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age_0 = 22\n",
+    "age_1 = 18\n",
+    "age_0 >= 21 and age_1 >= 21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "requested_toppings = ['mushrooms', 'onions', 'pineapple']\n",
+    "print('mushrooms' in requested_toppings)\n",
+    "print('pepperoni' in requested_toppings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marie, you can post a response if you wish.\n"
+     ]
+    }
+   ],
+   "source": [
+    "banned_users = ['andrew', 'carolina', 'david']\n",
+    "user = 'marie'\n",
+    "\n",
+    "if user not in banned_users:\n",
+    "    print(f\"{user.title()}, you can post a response if you wish.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your admission cost is $25.\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 12\n",
+    "\n",
+    "if age < 4:\n",
+    "    print(\"Your admission cost is $0.\")\n",
+    "elif age < 18:\n",
+    "    print(\"Your admission cost is $25.\")\n",
+    "else:\n",
+    "    print(\"Your admission cost is $40.\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.8.10 ('crash-course')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "a93b8fae2cd1c74ff4ee3b5f02b9516d70685fcd0e490cbf3782ac80326cf4be"
    }
   }
  },
