--- a/chapter-05.ipynb
+++ b/chapter-05.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,16 +110,20 @@
     }
    ],
    "source": [
-    "banned_users = ['andrew', 'carolina', 'david']\n",
-    "user = 'marie'\n",
+    "def main():\n",
+    "    banned_users = ['andrew', 'carolina', 'david']\n",
+    "    user = 'marie'\n",
     "\n",
-    "if user not in banned_users:\n",
-    "    print(f\"{user.title()}, you can post a response if you wish.\")"
+    "    if user not in banned_users:\n",
+    "        print(f\"{user.title()}, you can post a response if you wish.\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -131,14 +135,18 @@
     }
    ],
    "source": [
-    "age = 12\n",
+    "def main():\n",
+    "    age = 12\n",
     "\n",
-    "if age < 4:\n",
-    "    print(\"Your admission cost is $0.\")\n",
-    "elif age < 18:\n",
-    "    print(\"Your admission cost is $25.\")\n",
-    "else:\n",
-    "    print(\"Your admission cost is $40.\")"
+    "    if age < 4:\n",
+    "        print(\"Your admission cost is $0.\")\n",
+    "    elif age < 18:\n",
+    "        print(\"Your admission cost is $25.\")\n",
+    "    else:\n",
+    "        print(\"Your admission cost is $40.\")\n",
+    "        \n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   }
  ],
